Okay, I should have fixed all alignments with the new SSAO paddings.

--- a/css/style.css
+++ b/css/style.css
@@ -298,7 +298,8 @@ http://www.fontsquirrel.com/tools/webfont-generator
 	overflow: visible;
 	/*height: 100%; */
 	width: 100%; 
-	font-size: 16px;									
+	font-size: 16px;			
+		
 }
 body, select, input, textarea { 
   /* #444 looks better than black: twitter.com/H_FJ/statuses/11800719859 */ 
@@ -1354,10 +1355,20 @@ button {  width: auto; overflow: visible; }
 	/*margin-bottom: -50px;*/
 	padding-bottom: 50px;/*20*/
 
-	width: 95%;
+	/*width: 97%;95*/
+	width: 93%;/*95*/
 	max-width: 1024px;
 
-	padding-left: 20px;
+	/*padding-left: 20px;*/
+	margin-left: 20px;
+
+
+	background-color: white;
+	-webkit-box-shadow: 0px 5px 24px rgba(0,0,0,.38);
+	-moz-box-shadow: 0px 5px 24px rgba(0,0,0,.38);
+	box-shadow: 0px 5px 24px rgba(0,0,0,.38);
+	
+
 }
 
 
@@ -1377,7 +1388,7 @@ button {  width: auto; overflow: visible; }
 	z-index: 2;
 	/*height: 35px;*/
 	height: 40px;
-	width: 100%;
+	width: 102%;
 	top: 0px;
 	/*background-color: rgb(236,85,84);*/
 	background-color: rgb(190,105,105);
@@ -1395,7 +1406,7 @@ button {  width: auto; overflow: visible; }
 	-moz-box-shadow: 0px 1px 2px rgba(76,76,76,.3);
 	box-shadow: 0px 1px 2px rgba(76,76,76,.3);  
 	
-
+	margin-left: -10px;
 }
 
 #bottomBar{
@@ -1405,7 +1416,7 @@ button {  width: auto; overflow: visible; }
 	z-index: 2;
 	/*height: 35px;*/
 	height: 55px;
-	width: 100%;
+	width: 94.8%;
 	bottom: 4px;
 
 	/*background-color: rgb(236,85,84);*/
@@ -1437,6 +1448,8 @@ button {  width: auto; overflow: visible; }
 	4px 4px 6px rgba(0,0,0,.18);
 	
 	margin-bottom: 30px;
+	margin-left: 10px;
+
 }
 
 .backBg{
@@ -1489,7 +1502,7 @@ button {  width: auto; overflow: visible; }
 	/*font-size: 12px;*/
 	font-size: 16px;
 	color: black;
-	width: 100%;
+	width: 99.5%;
 	/*height: 12px;*/
 	height: 18px;
 	/*padding-left: 84px;*/
@@ -2110,13 +2123,15 @@ button {  width: auto; overflow: visible; }
 	box-shadow: 0px 0px 10px 200px rgba(257,254,255,0.5039); */
 	
 	/*width: 1024px;*/
-	width: 760px;
-	border-left: 132px solid white;
-	border-right: 132px solid white;
+	/*width: 760px;*/
+	/*width: 74%;*/
+	width: 74%;
+	/*border-left: 132px solid white;*/
+	/*border-left: 132px solid white;*/
+	/*border-right: 20% solid white;*/
 	
-	-webkit-box-shadow: 0px 5px 24px rgba(0,0,0,.38);
-	-moz-box-shadow: 0px 5px 24px rgba(0,0,0,.38);
-	box-shadow: 0px 5px 24px rgba(0,0,0,.38);
+	
+
 
 }
 
@@ -2545,7 +2560,8 @@ button {  width: auto; overflow: visible; }
 
 
 #icontent{
-	width: 101.5%;
+	/*width: 101.5%;*/
+	width: 103.5%;
 	height: 900px;
 	overflow: visible;
 	visibility: hidden;
